@@ -2,6 +2,18 @@
 
         Reviewed by Kenneth Rohde Christiansen.
 
+        [EFL] Fix wrongly set clipper. Now the scrollbars from main
+        frame are shown even on a zoom level lower than 1.0.
+
+        * efl/ewk/ewk_view_single.c:
+        (_ewk_view_single_smart_add):
+        (_ewk_view_single_smart_backing_store_add):
+        (ewk_view_single_smart_set):
+
+2010-05-28  Lucas De Marchi  <lucas.demarchi@profusion.mobi>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
         [EFL] Add support for Popup menus
         https://bugs.webkit.org/show_bug.cgi?id=39629
 
